--- a/.env.local
+++ b/.env.local
@@ -29,4 +29,11 @@ CLERK_SECRET_KEY=sk_test_ppJgxvvFaN0bhmLUx7zwbC0lMHzURrMiFPzzhX58FV
 
 # Pinterest
 # PINTEREST_APP_ID=
-# PINTEREST_APP_SECRET= 
+# PINTEREST_APP_SECRET=
+
+# Twitter API Keys
+TWITTER_CLIENT_ID=your_twitter_client_id
+TWITTER_CLIENT_SECRET=your_twitter_client_secret
+
+# Base URL
+NEXT_PUBLIC_APP_URL=http://localhost:3000 
