--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.31.6",
     "@supabase/supabase-js": "^2.48.1",
     "autoprefixer": "^10.4.14",
+    "date-fns": "^4.1.0",
     "next": "^14.1.0",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@types/node": "20.8.1",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
